2016-02-16 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Look for ( when looking for aggregate operators only before from, ignoring thus IN(...)

2016-02-16 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Look for 'LIMIT ' including space to reduce risk of matching a field.

2015-11-23 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (fieldsByParsingQuery)
	Detect nested query and return unsupported exception.

2015-11-19 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Mark first batch run as done only when it actually did run (object conut > 0)

2015-10-20 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.h
	* DBCSVWriter.m
	DBCSVLineBreakHandling : filter line breaks in strings

2015-09-12 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (queryMore)
	Check if returned object is an array: do not use size to determine if a single object is returned, since size refers to the size of the whole query.

2015-09-12 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	in _query check size against declared size.

2015-09-07 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	use upBatchSize for delete batch size

2015-07-02 Riccardo Mottola <rm@gnu.org>

	* DBCSVReader.m
        More extensive rewrite to handle qualifiers and escaped qualifiers

2015-06-25 Riccardo Mottola <rm@gnu.org>

	* DBCSVReader.m
	Try to properly parse double-quoted quote characters

2015-05-15 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m (query)
	Use a loop-local autorelease pool and drain it.

2015-04-30 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m (queryIdentify)
	Use a loop-local autorelease pool and drain it.

2015-04-29 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m (queryIdentify)
	Do not batch in a mutable array emptied each time, but work on NSArray as subarray and release it at each cycle

2015-04-28 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Increment progress by te current batch size, do not set an absolute value.

2015-04-24 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m